hphp/hack/test/typecheck/goto_mid_statement.php.exp
File "goto_mid_statement.php", line 4, characters 17-18:
Encountered unexpected token 'L0'. (Parsing[1002])
